src/runners/snapshots/elelemer__runners__llamacpp__tests__llamacpp_stream_chunk_deserialises_reasoning_stream_message.snap
---
source: src/runners/llamacpp.rs
expression: chunk
---
{
  "choices": [
    {
      "finish_reason": null,
      "delta": {
        "reasoning_content": "2"
      }
    }
  ],
  "model": "qwen-3.5-35b-a3b",
  "timings": null
}
